discussion/kv_engine/156244/156244_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Reset PID when configuration changes

Update the PID so that it will recheck the configuration
against its internal state.

Whenever one of the terms changes, the PID resets.

Change-Id: I247f6d9d67fd6ef4c2484077a0fe1091dd22ac6e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-23 13:17:26.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-23 13:28:54.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10176/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22: error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
float PIDController::stepCore(
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:49:21: error: no template named "function" in namespace "std" [clang-diagnostic-error]
               std::function<void(PIDController&)> checkAndMaybeReset) {
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:101:25: error: no template named "function" in namespace "std" [clang-diagnostic-error]
                   std::function<void(PIDController&)> checkAndMaybeReset);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tools/pid_runner.cc:130:22: error: no matching member function for call to "step" [clang-diagnostic-error]
        auto c = pid.step<FauxClock>(pv, [](PIDController&) {});
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10176/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22:
error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10176/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37248/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\pid_controller.h(49): error C2039: "function": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37248/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31781/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10829/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11897/ : FAILURE

Compile error at [2021-06-23T13:19:05.173Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11897/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11747/ : FAILURE

Compile error at [2021-06-23T13:19:56.143Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12214/ : FAILURE

Compile error at [2021-06-23T13:19:40.705Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12214/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19783/ : FAILURE

Compile error at [2021-06-23T13:24:34.530Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19783/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8774/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
